fix(username): text-overflow ellipsis when username is too long

--- a/www/src/css/main.css
+++ b/www/src/css/main.css
@@ -1537,3 +1537,10 @@ summary::marker {
 .no-wrap-text {
     white-space: nowrap;
 }
+
+.name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 11rem;
+}
